--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,65 +1,34 @@
-h1 {
-  font-size: 2em;
+@import '~antd/dist/antd.css';
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
+
 body {
   font-family: 'Roboto';
-  background-color: #808080;
 }
-.color-blue {
-  background-color: #ffa500;
+
+#main {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
 }
-.color-purple {
-  background-color: #800080;
+
+#main header {
+  flex: 0 1 auto;
 }
-.generic-center {
-  margin: auto;
-  padding: 2rem;
-  border: 2px solid #000;
-  text-align: center;
+
+#main main {
+  flex: 1 1 auto;
 }
-.dummy-height {
-  min-height: 500px;
+
+#main footer {
+  flex: 0 1 40px;
 }
-.border {
-  border: 2px solid #000;
-}
-.borderless {
-  border: none;
-}
-.App {
-  text-align: center;
-}
-.App-logo {
-  -webkit-animation: App-logo-spin infinite 20s linear;
-          animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: #fff;
-}
-.App-intro {
-  font-size: large;
-}
-@-webkit-keyframes App-logo-spin {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-@keyframes App-logo-spin {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+
+#main main .site-content {
+  background: #fff;
+  padding: 24px;
+  min-height: 72vh;
 }
