--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,7 +28,8 @@ body {
 }
 
 #main main .site-content {
-  background: #fff;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 24px;
   min-height: 72vh;
 }
