--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,35 +1,39 @@
 @import '~antd/dist/antd.css';
 
-html, body {
-  height: 100%;
-  margin: 0;
+html,
+body {
+    height: 100%;
+    margin: 0;
 }
 
 body {
-  font-family: 'Roboto';
+    font-family: 'Roboto';
 }
 
 #main {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
 }
 
 #main header {
-  flex: 0 1 auto;
+    flex: 0 1 auto;
 }
 
 #main main {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 #main footer {
-  flex: 0 1 40px;
+    flex: 0 1 40px;
 }
 
 #main main .site-content {
-  background-color: #ffffff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 24px;
-  min-height: 72vh;
+    background-color: #ffffff;
+    box-shadow:
+        0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 50px;
+    padding-top: 20px;
+    min-height: 72vh;
 }
