--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,9 +11,10 @@ body {
 }
 
 #main {
+    position: relative;
     display: flex;
     flex-flow: column;
-    height: 100%;
+    min-height: 100vh;
 }
 
 #main header {
@@ -30,9 +31,6 @@ body {
 
 #main main .site-content {
     background-color: #ffffff;
-    box-shadow:
-        0 4px 8px 0 rgba(0, 0, 0, 0.2),
-        0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 50px;
     padding-top: 20px;
     min-height: 72vh;
