--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 html,
 body {
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-    font-family: 'Roboto';
+    font-family: "Roboto";
 }
 
 #main {
